2011-04-12  Andreas Schwab  <schwab@linux-m68k.org>

	* charset.c (Fclear_charset_maps): Use xfree instead of free.
	(Bug#8437)
	* keyboard.c (parse_tool_bar_item): Likewise.
	* sound.c (sound_cleanup, alsa_close): Likewise.
	* termcap.c (tgetent): Likewise.
	* xfns.c (x_default_font_parameter): Likewise.
	* xsettings.c (read_and_apply_settings): Likewise.

	* alloc.c (overrun_check_malloc, overrun_check_realloc)
	(overrun_check_free): Protoize.

2011-04-12  Paul Eggert  <eggert@cs.ucla.edu>

	* sysdep.c (emacs_read, emacs_write): Check for negative sizes
	since callers should never pass a negative size.
	Change the signature to match that of plain 'read' and 'write'; see
	<http://lists.gnu.org/archive/html/emacs-devel/2011-04/msg00397.html>.
	* lisp.h: Update prototypes of emacs_write and emacs_read.

2011-04-11  Eli Zaretskii  <eliz@gnu.org>

	* xdisp.c (redisplay_window): Don't try to determine the character
	position of the scroll margin if the window start point w->startp
	is outside the buffer's accessible region.  (Bug#8468)

2011-04-10  Eli Zaretskii  <eliz@gnu.org>

	Fix write-region and its subroutines for buffers > 2GB.
	* fileio.c (a_write, e_write): Modify declaration of arguments and
	local variables to support buffers larger than 2GB.
	(Fcopy_file): Use EMACS_INT for return value of emacs_read.

	* sysdep.c (emacs_write, emacs_read): Use ssize_t for last
	argument, local variables, and return value.

	* lisp.h: Update prototypes of emacs_write and emacs_read.

	* sound.c (vox_write): Use ssize_t for return value of emacs_write.

2011-04-10  Paul Eggert  <eggert@cs.ucla.edu>

	* xdisp.c (vmessage): Use memchr, not strnlen, which some hosts lack.

	Fix more problems found by GCC 4.6.0's static checks.

	* xdisp.c (vmessage): Use a better test for character truncation.

	* charset.c (load_charset_map): <, not <=, for optimization,
	and to avoid potential problems with integer overflow.